# backend/main/router/main.go
@@ -10,6 +10,7 @@ import (
 
 	// authRouter "main/router/auth"
 	authRouter "main/router/auth"
+	boardsRouter "main/router/boards"
 	profileRouter "main/router/profile"
 	tasksRouter "main/router/tasks"
 
@@ -52,6 +53,7 @@ func New(auth *auth.Auth, db *gorm.DB, validate *validator.Validate) *gin.Engine
 	authRouter.AddRoutes(router.Group("auth"), auth, validate, db)
 	profileRouter.AddRoutes(router.Group("profile", IsAuthenticated(auth)), validate, db)
 	tasksRouter.AddRoutes(router.Group("tasks", IsAuthenticated(auth)), db, validate)
+	boardsRouter.AddRoutes(router.Group("boards", IsAuthenticated(auth)), db, validate)
 
 	return router
 }
